--- a/snippets/card-product.liquid
+++ b/snippets/card-product.liquid
@@ -36,6 +36,7 @@
     endif
   -%}
   <div class="card-wrapper product-card-wrapper underline-links-hover">
+    <h1>TU PUTA MADRE</h1>
     <div
       class="
         card card--{{ settings.card_style }}
